--- a/CAF-1_Paper_Figure1_combined_script_ET.Rmd
+++ b/CAF-1_Paper_Figure1_combined_script_ET.Rmd
@@ -89,7 +89,7 @@ colnames(Averaged_Orderd_KO_data) <- averageRowIDs
 
 Data_Chaperones = Averaged_Orderd_KO_data [,1:9]
 Data_ash1 = Averaged_Orderd_KO_data [,c(1,3:5,13)]
-Data_Doubles = Averaged_Orderd_KO_data [,c(1,3,4,10,12,11)]
+Data_Doubles = Averaged_Orderd_KO_data [,c(1,12,3,11)]
 
 ```
 
@@ -276,13 +276,11 @@ ggsave(filename = "./CAF-1_K27_Heatmap_Paper_Final.pdf", plot = heatmap_plot, dp
 
 ```{r Plotting data in Violin Plot for Double Mutants, echo=FALSE}
 # Define factor order and formatted x-axis labels
-label_order <- c("WT", "cac-1", "cac-2", "cac-1_cac-2", "suz-12", "cac-1_suz-12")
+label_order <- c("WT", "suz-12", "cac-1", "cac-1_suz-12")
 formatted_labels <- c(
   "WT",
-  expression(italic("\u0394cac-1")),
-  expression(italic("\u0394cac-2")),
-  expression(italic("\u0394cac-1_cac-2")),
   expression(italic("\u0394suz-12")),
+  expression(italic("\u0394cac-1")),
   expression(italic("\u0394cac-1_suz-12"))
 )
 
@@ -329,7 +327,7 @@ ggsave("./CAF-1_Double_Mutant_K27_Violin_Paper_Final.pdf", plot=violin, width = 
 GenesWithChanges <- subset(AVERAGE_Prc2targetTPM_Double, (rowSums(AVERAGE_Prc2targetTPM_Double) > 0))
 
 #plot in the desired column order; did this by subsetting the dataset based on sample list 'altorder' above
-heatmap <- pheatmap(GenesWithChanges, color = colorRampPalette(rev(brewer.pal(n = 9, name ="RdBu")))(100), cellwidth = NA, cellheight = NA, scale = "row", cluster_rows = T, cluster_cols = F, clustering_method="centroid", clustering_distance_cols="euclidean", legend=T, show_rownames=F, show_colnames=T, fontsize_col=10, treeheight_row=0, treeheight_col=5, height = 1.5, width = 2.5, fontsize = 8)
+heatmap <- pheatmap::pheatmap(GenesWithChanges, color = colorRampPalette(rev(brewer.pal(n = 9, name ="RdBu")))(100), cellwidth = NA, cellheight = NA, scale = "row", cluster_rows = T, cluster_cols = F, clustering_method="centroid", clustering_distance_cols="euclidean", legend=T, show_rownames=F, show_colnames=T, fontsize_col=10, treeheight_row=0, treeheight_col=5, height = 1.5, width = 2.5, fontsize = 8)
 
 #plot
 heatmap_plot <- heatmap[[4]]
